parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ACTUAL
    ANNOTATION
    ARRAYLIST
    ARRAYOF
    ARROW
    AS
    AT_NO_WS
    BREAK
    BY
    CATCH
    CLASS
    COLONCOLON
    COMMA
    COMMENT
    COMPANION
    CONST
    CONSTRUCTOR
    CONTINUE
    CROSSINLINE
    DATA
    DECR
    DECREMENTIN
    DIVIDEIN
    DO
    DOUBLE_ARROW
    DOUBLE_SEMICOLON
    DYNAMIC
    ENUM
    EXCL_NO_WS
    EXPECT
    EXTERNAL
    FIELD
    FILE
    FINAL
    FINALLY
    GET
    HASH
    IMPORT
    INCR
    INCREMENTIN
    INCREMENTTIMES
    INFIX
    INIT
    INLINE
    INNER
    INTERFACE
    INTERNAL
    IS
    LATEINIT
    LISTOF
    LSQUARE
    MARK_1
    MARK_2
    MODIN
    NOINLINE
    OPEN
    OPERATOR
    OUT
    OVERRIDE
    PACKAGE
    PARAM
    PRIVATE
    PROPERTY
    PROTECTED
    PUBLIC
    QUEST_WS
    RANGE
    RECEIVER
    REIFIED
    RETURN
    RSQUARE
    SEALED
    SET
    SETPARAM
    SINGLE_QUOTE
    SUM
    SUPER
    SUSPEND
    TAILREC
    TEMPLATE
    THIS
    THROW
    TRY
    TYPEOF
    TYPE_ALIAS
    VALUE
    VAL_TIPO_1
    VARARG
    VAR_TIPO_1
    WHEN
    WHERE

Grammar

Rule 0     S' -> line
Rule 1     line -> blocks
Rule 2     line -> blocks SEMICOLON
Rule 3     line -> blocks LINEBREAK
Rule 4     line -> blocks LINEBREAK line
Rule 5     line -> blocks LINEBREAK line LINEBREAK
Rule 6     line -> blocks SEMICOLON LINEBREAK
Rule 7     line -> blocks SEMICOLON LINEBREAK line
Rule 8     line -> blocks SEMICOLON LINEBREAK line LINEBREAK
Rule 9     line -> LINEBREAK
Rule 10    blocks -> impresion
Rule 11    blocks -> expression
Rule 12    blocks -> estructurasControl
Rule 13    blocks -> condicion
Rule 14    blocks -> funcion
Rule 15    blocks -> asignacion
Rule 16    blocks -> estructurasDatos
Rule 17    estructurasDatos -> queue
Rule 18    estructurasDatos -> queue_operations
Rule 19    estructurasDatos -> stack
Rule 20    estructurasDatos -> stack_actuar
Rule 21    estructurasDatos -> instance_linkedlist
Rule 22    estructurasDatos -> def_estruct_tipoDato
Rule 23    estructurasDatos -> lista
Rule 24    estructurasDatos -> lsimplem
Rule 25    estructurasDatos -> lcomp
Rule 26    estructurasControl -> for
Rule 27    estructurasControl -> if
Rule 28    estructurasControl -> while
Rule 29    queue_operations -> queue_add
Rule 30    queue_operations -> queue_peek
Rule 31    queue_operations -> queue_remove
Rule 32    queue_operations -> queue_poll
Rule 33    queue_add -> ID DOT ADD LPAREN factor RPAREN
Rule 34    queue_peek -> ID DOT PEEK LPAREN RPAREN
Rule 35    queue_poll -> ID DOT POLL LPAREN RPAREN
Rule 36    queue_remove -> ID DOT REMOVE LPAREN RPAREN
Rule 37    impresion -> PRINT LPAREN expression RPAREN
Rule 38    impresion -> PRINTLN LPAREN expression RPAREN
Rule 39    impresion -> PRINT LPAREN error RPAREN
Rule 40    queue -> VAL ID DOTS QUEUE LANGLE tipoDato RANGLE EQUAL LINKEDL LANGLE tipoDato RANGLE LPAREN RPAREN
Rule 41    for -> FOR LPAREN ID IN iterable RPAREN LCURL lineorBreak RCURL
Rule 42    iterable -> ID
Rule 43    iterable -> INT THREEDOTS INT
Rule 44    iterable -> ID DOT INDICES
Rule 45    asignacion -> keywordVariables asignacionSimple
Rule 46    asignacion -> asignacionSimple
Rule 47    keywordVariables -> VAR
Rule 48    keywordVariables -> VAL
Rule 49    asignacionSimple -> ID DOTS tipoDatoEspecifico
Rule 50    asignacionSimple -> ID EQUAL valor
Rule 51    tipoDatoEspecifico -> tipoEntero
Rule 52    tipoDatoEspecifico -> tipoLong
Rule 53    tipoDatoEspecifico -> tipoFloat
Rule 54    tipoDatoEspecifico -> tipoBoolean
Rule 55    tipoDatoEspecifico -> tipoChar
Rule 56    tipoDatoEspecifico -> tipoString
Rule 57    tipoEntero -> TINT EQUAL INT
Rule 58    tipoEntero -> TINT EQUAL error
Rule 59    tipoLong -> TLONG EQUAL LONG
Rule 60    tipoLong -> TLONG EQUAL error
Rule 61    tipoFloat -> TFLOAT EQUAL FLOAT
Rule 62    tipoFloat -> TFLOAT EQUAL error
Rule 63    tipoBoolean -> TBOOLEAN EQUAL BOOLEAN
Rule 64    tipoBoolean -> TBOOLEAN EQUAL error
Rule 65    tipoChar -> TCHAR EQUAL CHAR
Rule 66    tipoChar -> TCHAR EQUAL error
Rule 67    tipoString -> TSTRING EQUAL STRING_1
Rule 68    tipoString -> TSTRING EQUAL error
Rule 69    tipoDato -> TINT
Rule 70    tipoDato -> TLONG
Rule 71    tipoDato -> TFLOAT
Rule 72    tipoDato -> TDOUBLE
Rule 73    tipoDato -> TBOOLEAN
Rule 74    tipoDato -> TCHAR
Rule 75    tipoDato -> TSTRING
Rule 76    valor -> expression
Rule 77    expression -> expression PLUS term
Rule 78    expression -> expression MINUS term
Rule 79    expression -> expression TIMES term
Rule 80    expression -> expression DIVIDE term
Rule 81    expression -> expression MOD term
Rule 82    expression -> expression INCREMENTONE
Rule 83    expression -> expression DECREMENTONE
Rule 84    expression -> term
Rule 85    term -> factor
Rule 86    term -> LPAREN expression RPAREN
Rule 87    factor -> INT
Rule 88    factor -> FLOAT
Rule 89    factor -> LONG
Rule 90    factor -> CHAR
Rule 91    factor -> BOOLEAN
Rule 92    factor -> ID
Rule 93    factor -> STRING_1
Rule 94    funcion -> FUN ID LPAREN RPAREN LCURL lineorBreak RCURL
Rule 95    funcion -> FUN ID LPAREN ID RPAREN LCURL lineorBreak RCURL
Rule 96    funcion -> FUN ID LPAREN ID RPAREN LCURL RCURL
Rule 97    funcion -> FUN ID LPAREN RPAREN LCURL RCURL
Rule 98    lineorBreak -> line
Rule 99    lineorBreak -> LINEBREAK line LINEBREAK
Rule 100   lineorBreak -> LINEBREAK line
Rule 101   if -> IF LPAREN condicion RPAREN LCURL lineorBreak RCURL
Rule 102   if -> IF LPAREN condicion RPAREN LCURL lineorBreak RCURL else
Rule 103   else -> ELSE LCURL lineorBreak RCURL
Rule 104   condicion -> condicionL
Rule 105   condicion -> condicionR
Rule 106   condicion -> condicionN
Rule 107   condicionL -> BOOLEAN opL BOOLEAN
Rule 108   condicionL -> ID opL ID
Rule 109   condicionL -> ID opL BOOLEAN
Rule 110   condicionL -> BOOLEAN opL ID
Rule 111   condicionR -> INT opR INT
Rule 112   condicionR -> INT opR FLOAT
Rule 113   condicionR -> INT opR LONG
Rule 114   condicionR -> INT opR ID
Rule 115   condicionR -> FLOAT opR FLOAT
Rule 116   condicionR -> FLOAT opR INT
Rule 117   condicionR -> FLOAT opR LONG
Rule 118   condicionR -> FLOAT opR ID
Rule 119   condicionR -> LONG opR LONG
Rule 120   condicionR -> LONG opR INT
Rule 121   condicionR -> LONG opR FLOAT
Rule 122   condicionR -> LONG opR ID
Rule 123   condicionR -> STRING_1 opR STRING_1
Rule 124   condicionR -> STRING_1 opR ID
Rule 125   condicionR -> CHAR opR CHAR
Rule 126   condicionR -> CHAR opR ID
Rule 127   condicionR -> ID opR ID
Rule 128   condicionR -> ID opR INT
Rule 129   condicionR -> ID opR FLOAT
Rule 130   condicionR -> ID opR LONG
Rule 131   condicionR -> ID opR STRING_1
Rule 132   condicionR -> ID opR CHAR
Rule 133   condicionN -> EXCL_WS BOOLEAN
Rule 134   condicionN -> EXCL_WS ID
Rule 135   opL -> CONJ
Rule 136   opL -> DISJ
Rule 137   opR -> LANGLE
Rule 138   opR -> RANGLE
Rule 139   opR -> LE
Rule 140   opR -> GE
Rule 141   opR -> EXCL_EQ
Rule 142   opR -> EXCL_EQEQ
Rule 143   opR -> AS_SAFE
Rule 144   opR -> EQEQ
Rule 145   opR -> EQEQEQ
Rule 146   stack -> keywordVariables ID DOTS def_estruct_tipoDato EQUAL instance_linkedlist
Rule 147   def_estruct_tipoDato -> STACK LANGLE tipoDato RANGLE
Rule 148   instance_linkedlist -> LINKEDL LPAREN RPAREN
Rule 149   stack_actuar -> ID DOT stack_funciones
Rule 150   stack_funciones -> stack_isEmpty
Rule 151   stack_funciones -> stack_push
Rule 152   stack_funciones -> stack_pop
Rule 153   stack_funciones -> stack_peek
Rule 154   stack_funciones -> stack_size
Rule 155   stack_isEmpty -> ISEMPTY LPAREN RPAREN
Rule 156   stack_pop -> POP LPAREN RPAREN
Rule 157   stack_push -> PUSH LPAREN factor RPAREN
Rule 158   stack_peek -> PEEK LPAREN RPAREN
Rule 159   stack_size -> SIZE LPAREN RPAREN
Rule 160   Lmetod -> FIRST LPAREN RPAREN
Rule 161   Lmetod -> LAST LPAREN RPAREN
Rule 162   Lmetod -> REMOVEL LPAREN RPAREN
Rule 163   Cmetod -> APPEND LPAREN OBJECT RPAREN
Rule 164   Cmetod -> REMOVEN LPAREN OBJECT RPAREN
Rule 165   Cmetod -> REMOVEI LPAREN TINT RPAREN
Rule 166   while -> WHILE LPAREN ID opR INT RPAREN LCURL lineorBreak RCURL
Rule 167   lista -> keywordVariables ID DOTS LINKEDL LANGLE OBJECT RANGLE EQUAL LINKEDL LANGLE OBJECT RANGLE LPAREN RPAREN
Rule 168   lsimplem -> ID DOT Lmetod
Rule 169   lcomp -> ID DOT Cmetod

Terminals, with rules where they appear

ABSTRACT             : 
ACTUAL               : 
ADD                  : 33
ANNOTATION           : 
APPEND               : 163
ARRAYLIST            : 
ARRAYOF              : 
ARROW                : 
AS                   : 
AS_SAFE              : 143
AT_NO_WS             : 
BOOLEAN              : 63 91 107 107 109 110 133
BREAK                : 
BY                   : 
CATCH                : 
CHAR                 : 65 90 125 125 126 132
CLASS                : 
COLONCOLON           : 
COMMA                : 
COMMENT              : 
COMPANION            : 
CONJ                 : 135
CONST                : 
CONSTRUCTOR          : 
CONTINUE             : 
CROSSINLINE          : 
DATA                 : 
DECR                 : 
DECREMENTIN          : 
DECREMENTONE         : 83
DISJ                 : 136
DIVIDE               : 80
DIVIDEIN             : 
DO                   : 
DOT                  : 33 34 35 36 44 149 168 169
DOTS                 : 40 49 146 167
DOUBLE_ARROW         : 
DOUBLE_SEMICOLON     : 
DYNAMIC              : 
ELSE                 : 103
ENUM                 : 
EQEQ                 : 144
EQEQEQ               : 145
EQUAL                : 40 50 57 58 59 60 61 62 63 64 65 66 67 68 146 167
EXCL_EQ              : 141
EXCL_EQEQ            : 142
EXCL_NO_WS           : 
EXCL_WS              : 133 134
EXPECT               : 
EXTERNAL             : 
FIELD                : 
FILE                 : 
FINAL                : 
FINALLY              : 
FIRST                : 160
FLOAT                : 61 88 112 115 115 116 117 118 121 129
FOR                  : 41
FUN                  : 94 95 96 97
GE                   : 140
GET                  : 
HASH                 : 
ID                   : 33 34 35 36 40 41 42 44 49 50 92 94 95 95 96 96 97 108 108 109 110 114 118 122 124 126 127 127 128 129 130 131 132 134 146 149 166 167 168 169
IF                   : 101 102
IMPORT               : 
IN                   : 41
INCR                 : 
INCREMENTIN          : 
INCREMENTONE         : 82
INCREMENTTIMES       : 
INDICES              : 44
INFIX                : 
INIT                 : 
INLINE               : 
INNER                : 
INT                  : 43 43 57 87 111 111 112 113 114 116 120 128 166
INTERFACE            : 
INTERNAL             : 
IS                   : 
ISEMPTY              : 155
LANGLE               : 40 40 137 147 167 167
LAST                 : 161
LATEINIT             : 
LCURL                : 41 94 95 96 97 101 102 103 166
LE                   : 139
LINEBREAK            : 3 4 5 5 6 7 8 8 9 99 99 100
LINKEDL              : 40 148 167 167
LISTOF               : 
LONG                 : 59 89 113 117 119 119 120 121 122 130
LPAREN               : 33 34 35 36 37 38 39 40 41 86 94 95 96 97 101 102 148 155 156 157 158 159 160 161 162 163 164 165 166 167
LSQUARE              : 
MARK_1               : 
MARK_2               : 
MINUS                : 78
MOD                  : 81
MODIN                : 
NOINLINE             : 
OBJECT               : 163 164 167 167
OPEN                 : 
OPERATOR             : 
OUT                  : 
OVERRIDE             : 
PACKAGE              : 
PARAM                : 
PEEK                 : 34 158
PLUS                 : 77
POLL                 : 35
POP                  : 156
PRINT                : 37 39
PRINTLN              : 38
PRIVATE              : 
PROPERTY             : 
PROTECTED            : 
PUBLIC               : 
PUSH                 : 157
QUEST_WS             : 
QUEUE                : 40
RANGE                : 
RANGLE               : 40 40 138 147 167 167
RCURL                : 41 94 95 96 97 101 102 103 166
RECEIVER             : 
REIFIED              : 
REMOVE               : 36
REMOVEI              : 165
REMOVEL              : 162
REMOVEN              : 164
RETURN               : 
RPAREN               : 33 34 35 36 37 38 39 40 41 86 94 95 96 97 101 102 148 155 156 157 158 159 160 161 162 163 164 165 166 167
RSQUARE              : 
SEALED               : 
SEMICOLON            : 2 6 7 8
SET                  : 
SETPARAM             : 
SINGLE_QUOTE         : 
SIZE                 : 159
STACK                : 147
STRING_1             : 67 93 123 123 124 131
SUM                  : 
SUPER                : 
SUSPEND              : 
TAILREC              : 
TBOOLEAN             : 63 64 73
TCHAR                : 65 66 74
TDOUBLE              : 72
TEMPLATE             : 
TFLOAT               : 61 62 71
THIS                 : 
THREEDOTS            : 43
THROW                : 
TIMES                : 79
TINT                 : 57 58 69 165
TLONG                : 59 60 70
TRY                  : 
TSTRING              : 67 68 75
TYPEOF               : 
TYPE_ALIAS           : 
VAL                  : 40 48
VALUE                : 
VAL_TIPO_1           : 
VAR                  : 47
VARARG               : 
VAR_TIPO_1           : 
WHEN                 : 
WHERE                : 
WHILE                : 166
error                : 39 58 60 62 64 66 68

Nonterminals, with rules where they appear

Cmetod               : 169
Lmetod               : 168
asignacion           : 15
asignacionSimple     : 45 46
blocks               : 1 2 3 4 5 6 7 8
condicion            : 13 101 102
condicionL           : 104
condicionN           : 106
condicionR           : 105
def_estruct_tipoDato : 22 146
else                 : 102
estructurasControl   : 12
estructurasDatos     : 16
expression           : 11 37 38 76 77 78 79 80 81 82 83 86
factor               : 33 85 157
for                  : 26
funcion              : 14
if                   : 27
impresion            : 10
instance_linkedlist  : 21 146
iterable             : 41
keywordVariables     : 45 146 167
lcomp                : 25
line                 : 4 5 7 8 98 99 100 0
lineorBreak          : 41 94 95 101 102 103 166
lista                : 23
lsimplem             : 24
opL                  : 107 108 109 110
opR                  : 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 166
queue                : 17
queue_add            : 29
queue_operations     : 18
queue_peek           : 30
queue_poll           : 32
queue_remove         : 31
stack                : 19
stack_actuar         : 20
stack_funciones      : 149
stack_isEmpty        : 150
stack_peek           : 153
stack_pop            : 152
stack_push           : 151
stack_size           : 154
term                 : 77 78 79 80 81 84
tipoBoolean          : 54
tipoChar             : 55
tipoDato             : 40 40 147
tipoDatoEspecifico   : 49
tipoEntero           : 51
tipoFloat            : 53
tipoLong             : 52
tipoString           : 56
valor                : 50
while                : 28

Parsing method: LALR

state 0

    (0) S' -> . line
    (1) line -> . blocks
    (2) line -> . blocks SEMICOLON
    (3) line -> . blocks LINEBREAK
    (4) line -> . blocks LINEBREAK line
    (5) line -> . blocks LINEBREAK line LINEBREAK
    (6) line -> . blocks SEMICOLON LINEBREAK
    (7) line -> . blocks SEMICOLON LINEBREAK line
    (8) line -> . blocks SEMICOLON LINEBREAK line LINEBREAK
    (9) line -> . LINEBREAK
    (10) blocks -> . impresion
    (11) blocks -> . expression
    (12) blocks -> . estructurasControl
    (13) blocks -> . condicion
    (14) blocks -> . funcion
    (15) blocks -> . asignacion
    (16) blocks -> . estructurasDatos
    (37) impresion -> . PRINT LPAREN expression RPAREN
    (38) impresion -> . PRINTLN LPAREN expression RPAREN
    (39) impresion -> . PRINT LPAREN error RPAREN
    (77) expression -> . expression PLUS term
    (78) expression -> . expression MINUS term
    (79) expression -> . expression TIMES term
    (80) expression -> . expression DIVIDE term
    (81) expression -> . expression MOD term
    (82) expression -> . expression INCREMENTONE
    (83) expression -> . expression DECREMENTONE
    (84) expression -> . term
    (26) estructurasControl -> . for
    (27) estructurasControl -> . if
    (28) estructurasControl -> . while
    (104) condicion -> . condicionL
    (105) condicion -> . condicionR
    (106) condicion -> . condicionN
    (94) funcion -> . FUN ID LPAREN RPAREN LCURL lineorBreak RCURL
    (95) funcion -> . FUN ID LPAREN ID RPAREN LCURL lineorBreak RCURL
    (96) funcion -> . FUN ID LPAREN ID RPAREN LCURL RCURL
    (97) funcion -> . FUN ID LPAREN RPAREN LCURL RCURL
    (45) asignacion -> . keywordVariables asignacionSimple
    (46) asignacion -> . asignacionSimple
    (17) estructurasDatos -> . queue
    (18) estructurasDatos -> . queue_operations
    (19) estructurasDatos -> . stack
    (20) estructurasDatos -> . stack_actuar
    (21) estructurasDatos -> . instance_linkedlist
    (22) estructurasDatos -> . def_estruct_tipoDato
    (23) estructurasDatos -> . lista
    (24) estructurasDatos -> . lsimplem
    (25) estructurasDatos -> . lcomp
    (85) term -> . factor
    (86) term -> . LPAREN expression RPAREN
    (41) for -> . FOR LPAREN ID IN iterable RPAREN LCURL lineorBreak RCURL
    (101) if -> . IF LPAREN condicion RPAREN LCURL lineorBreak RCURL
    (102) if -> . IF LPAREN condicion RPAREN LCURL lineorBreak RCURL else
    (166) while -> . WHILE LPAREN ID opR INT RPAREN LCURL lineorBreak RCURL
    (107) condicionL -> . BOOLEAN opL BOOLEAN
    (108) condicionL -> . ID opL ID
    (109) condicionL -> . ID opL BOOLEAN
    (110) condicionL -> . BOOLEAN opL ID
    (111) condicionR -> . INT opR INT
    (112) condicionR -> . INT opR FLOAT
    (113) condicionR -> . INT opR LONG
    (114) condicionR -> . INT opR ID
    (115) condicionR -> . FLOAT opR FLOAT
    (116) condicionR -> . FLOAT opR INT
    (117) condicionR -> . FLOAT opR LONG
    (118) condicionR -> . FLOAT opR ID
    (119) condicionR -> . LONG opR LONG
    (120) condicionR -> . LONG opR INT
    (121) condicionR -> . LONG opR FLOAT
    (122) condicionR -> . LONG opR ID
    (123) condicionR -> . STRING_1 opR STRING_1
    (124) condicionR -> . STRING_1 opR ID
    (125) condicionR -> . CHAR opR CHAR
    (126) condicionR -> . CHAR opR ID
    (127) condicionR -> . ID opR ID
    (128) condicionR -> . ID opR INT
    (129) condicionR -> . ID opR FLOAT
    (130) condicionR -> . ID opR LONG
    (131) condicionR -> . ID opR STRING_1
    (132) condicionR -> . ID opR CHAR
    (133) condicionN -> . EXCL_WS BOOLEAN
    (134) condicionN -> . EXCL_WS ID
    (47) keywordVariables -> . VAR
    (48) keywordVariables -> . VAL
    (49) asignacionSimple -> . ID DOTS tipoDatoEspecifico
    (50) asignacionSimple -> . ID EQUAL valor
    (40) queue -> . VAL ID DOTS QUEUE LANGLE tipoDato RANGLE EQUAL LINKEDL LANGLE tipoDato RANGLE LPAREN RPAREN
    (29) queue_operations -> . queue_add
    (30) queue_operations -> . queue_peek
    (31) queue_operations -> . queue_remove
    (32) queue_operations -> . queue_poll
    (146) stack -> . keywordVariables ID DOTS def_estruct_tipoDato EQUAL instance_linkedlist
    (149) stack_actuar -> . ID DOT stack_funciones
    (148) instance_linkedlist -> . LINKEDL LPAREN RPAREN
    (147) def_estruct_tipoDato -> . STACK LANGLE tipoDato RANGLE
    (167) lista -> . keywordVariables ID DOTS LINKEDL LANGLE OBJECT RANGLE EQUAL LINKEDL LANGLE OBJECT RANGLE LPAREN RPAREN
    (168) lsimplem -> . ID DOT Lmetod
    (169) lcomp -> . ID DOT Cmetod
    (87) factor -> . INT
    (88) factor -> . FLOAT
    (89) factor -> . LONG
    (90) factor -> . CHAR
    (91) factor -> . BOOLEAN
    (92) factor -> . ID
    (93) factor -> . STRING_1
    (33) queue_add -> . ID DOT ADD LPAREN factor RPAREN
    (34) queue_peek -> . ID DOT PEEK LPAREN RPAREN
    (36) queue_remove -> . ID DOT REMOVE LPAREN RPAREN
    (35) queue_poll -> . ID DOT POLL LPAREN RPAREN

    LINEBREAK       shift and go to state 3
    PRINT           shift and go to state 11
    PRINTLN         shift and go to state 13
    FUN             shift and go to state 21
    LPAREN          shift and go to state 12
    FOR             shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    BOOLEAN         shift and go to state 39
    ID              shift and go to state 22
    INT             shift and go to state 38
    FLOAT           shift and go to state 40
    LONG            shift and go to state 41
    STRING_1        shift and go to state 42
    CHAR            shift and go to state 43
    EXCL_WS         shift and go to state 44
    VAR             shift and go to state 45
    VAL             shift and go to state 46
    LINKEDL         shift and go to state 47
    STACK           shift and go to state 52

    line                           shift and go to state 1
    blocks                         shift and go to state 2
    impresion                      shift and go to state 4
    expression                     shift and go to state 5
    estructurasControl             shift and go to state 6
    condicion                      shift and go to state 7
    funcion                        shift and go to state 8
    asignacion                     shift and go to state 9
    estructurasDatos               shift and go to state 10
    term                           shift and go to state 14
    for                            shift and go to state 15
    if                             shift and go to state 16
    while                          shift and go to state 17
    condicionL                     shift and go to state 18
    condicionR                     shift and go to state 19
    condicionN                     shift and go to state 20
    keywordVariables               shift and go to state 23
    asignacionSimple               shift and go to state 24
    queue                          shift and go to state 25
    queue_operations               shift and go to state 26
    stack                          shift and go to state 27
    stack_actuar                   shift and go to state 28
    instance_linkedlist            shift and go to state 29
    def_estruct_tipoDato           shift and go to state 30
    lista                          shift and go to state 31
    lsimplem                       shift and go to state 32
    lcomp                          shift and go to state 33
    factor                         shift and go to state 34
    queue_add                      shift and go to state 48
    queue_peek                     shift and go to state 49
    queue_remove                   shift and go to state 50
    queue_poll                     shift and go to state 51

state 1

    (0) S' -> line .



state 2

    (1) line -> blocks .
    (2) line -> blocks . SEMICOLON
    (3) line -> blocks . LINEBREAK
    (4) line -> blocks . LINEBREAK line
    (5) line -> blocks . LINEBREAK line LINEBREAK
    (6) line -> blocks . SEMICOLON LINEBREAK
    (7) line -> blocks . SEMICOLON LINEBREAK line
    (8) line -> blocks . SEMICOLON LINEBREAK line LINEBREAK

  ! shift/reduce conflict for LINEBREAK resolved as shift
    $end            reduce using rule 1 (line -> blocks .)
    RCURL           reduce using rule 1 (line -> blocks .)
    SEMICOLON       shift and go to state 53
    LINEBREAK       shift and go to state 54

  ! LINEBREAK       [ reduce using rule 1 (line -> blocks .) ]


state 3

    (9) line -> LINEBREAK .

    $end            reduce using rule 9 (line -> LINEBREAK .)
    LINEBREAK       reduce using rule 9 (line -> LINEBREAK .)
    RCURL           reduce using rule 9 (line -> LINEBREAK .)


state 4

    (10) blocks -> impresion .

    SEMICOLON       reduce using rule 10 (blocks -> impresion .)
    LINEBREAK       reduce using rule 10 (blocks -> impresion .)
    $end            reduce using rule 10 (blocks -> impresion .)
    RCURL           reduce using rule 10 (blocks -> impresion .)


state 5

    (11) blocks -> expression .
    (77) expression -> expression . PLUS term
    (78) expression -> expression . MINUS term
    (79) expression -> expression . TIMES term
    (80) expression -> expression . DIVIDE term
    (81) expression -> expression . MOD term
    (82) expression -> expression . INCREMENTONE
    (83) expression -> expression . DECREMENTONE

    SEMICOLON       reduce using rule 11 (blocks -> expression .)
    LINEBREAK       reduce using rule 11 (blocks -> expression .)
    $end            reduce using rule 11 (blocks -> expression .)
    RCURL           reduce using rule 11 (blocks -> expression .)
    PLUS            shift and go to state 55
    MINUS           shift and go to state 56
    TIMES           shift and go to state 57
    DIVIDE          shift and go to state 58
    MOD             shift and go to state 59
    INCREMENTONE    shift and go to state 60
    DECREMENTONE    shift and go to state 61


state 6

    (12) blocks -> estructurasControl .

    SEMICOLON       reduce using rule 12 (blocks -> estructurasControl .)
    LINEBREAK       reduce using rule 12 (blocks -> estructurasControl .)
    $end            reduce using rule 12 (blocks -> estructurasControl .)
    RCURL           reduce using rule 12 (blocks -> estructurasControl .)


state 7

    (13) blocks -> condicion .

    SEMICOLON       reduce using rule 13 (blocks -> condicion .)
    LINEBREAK       reduce using rule 13 (blocks -> condicion .)
    $end            reduce using rule 13 (blocks -> condicion .)
    RCURL           reduce using rule 13 (blocks -> condicion .)


state 8

    (14) blocks -> funcion .

    SEMICOLON       reduce using rule 14 (blocks -> funcion .)
    LINEBREAK       reduce using rule 14 (blocks -> funcion .)
    $end            reduce using rule 14 (blocks -> funcion .)
    RCURL           reduce using rule 14 (blocks -> funcion .)


state 9

    (15) blocks -> asignacion .

    SEMICOLON       reduce using rule 15 (blocks -> asignacion .)
    LINEBREAK       reduce using rule 15 (blocks -> asignacion .)
    $end            reduce using rule 15 (blocks -> asignacion .)
    RCURL           reduce using rule 15 (blocks -> asignacion .)


state 10

    (16) blocks -> estructurasDatos .

    SEMICOLON       reduce using rule 16 (blocks -> estructurasDatos .)
    LINEBREAK       reduce using rule 16 (blocks -> estructurasDatos .)
    $end            reduce using rule 16 (blocks -> estructurasDatos .)
    RCURL           reduce using rule 16 (blocks -> estructurasDatos .)


state 11

    (37) impresion -> PRINT . LPAREN expression RPAREN
    (39) impresion -> PRINT . LPAREN error RPAREN

    LPAREN          shift and go to state 62


state 12

    (86) term -> LPAREN . expression RPAREN
    (77) expression -> . expression PLUS term
    (78) expression -> . expression MINUS term
    (79) expression -> . expression TIMES term
    (80) expression -> . expression DIVIDE term
    (81) expression -> . expression MOD term
    (82) expression -> . expression INCREMENTONE
    (83) expression -> . expression DECREMENTONE
    (84) expression -> . term
    (85) term -> . factor
    (86) term -> . LPAREN expression RPAREN
    (87) factor -> . INT
    (88) factor -> . FLOAT
    (89) factor -> . LONG
    (90) factor -> . CHAR
    (91) factor -> . BOOLEAN
    (92) factor -> . ID
    (93) factor -> . STRING_1

    LPAREN          shift and go to state 12
    INT             shift and go to state 64
    FLOAT           shift and go to state 65
    LONG            shift and go to state 66
    CHAR            shift and go to state 67
    BOOLEAN         shift and go to state 68
    ID              shift and go to state 69
    STRING_1        shift and go to state 70

    expression                     shift and go to state 63
    term                           shift and go to state 14
    factor                         shift and go to state 34

state 13

    (38) impresion -> PRINTLN . LPAREN expression RPAREN

    LPAREN          shift and go to state 71


state 14

    (84) expression -> term .

    PLUS            reduce using rule 84 (expression -> term .)
    MINUS           reduce using rule 84 (expression -> term .)
    TIMES           reduce using rule 84 (expression -> term .)
    DIVIDE          reduce using rule 84 (expression -> term .)
    MOD             reduce using rule 84 (expression -> term .)
    INCREMENTONE    reduce using rule 84 (expression -> term .)
    DECREMENTONE    reduce using rule 84 (expression -> term .)
    SEMICOLON       reduce using rule 84 (expression -> term .)
    LINEBREAK       reduce using rule 84 (expression -> term .)
    $end            reduce using rule 84 (expression -> term .)
    RPAREN          reduce using rule 84 (expression -> term .)
    RCURL           reduce using rule 84 (expression -> term .)


state 15

    (26) estructurasControl -> for .

    SEMICOLON       reduce using rule 26 (estructurasControl -> for .)
    LINEBREAK       reduce using rule 26 (estructurasControl -> for .)
    $end            reduce using rule 26 (estructurasControl -> for .)
    RCURL           reduce using rule 26 (estructurasControl -> for .)


state 16

    (27) estructurasControl -> if .

    SEMICOLON       reduce using rule 27 (estructurasControl -> if .)
    LINEBREAK       reduce using rule 27 (estructurasControl -> if .)
    $end            reduce using rule 27 (estructurasControl -> if .)
    RCURL           reduce using rule 27 (estructurasControl -> if .)


state 17

    (28) estructurasControl -> while .

    SEMICOLON       reduce using rule 28 (estructurasControl -> while .)
    LINEBREAK       reduce using rule 28 (estructurasControl -> while .)
    $end            reduce using rule 28 (estructurasControl -> while .)
    RCURL           reduce using rule 28 (estructurasControl -> while .)


state 18

    (104) condicion -> condicionL .

    SEMICOLON       reduce using rule 104 (condicion -> condicionL .)
    LINEBREAK       reduce using rule 104 (condicion -> condicionL .)
    $end            reduce using rule 104 (condicion -> condicionL .)
    RCURL           reduce using rule 104 (condicion -> condicionL .)
    RPAREN          reduce using rule 104 (condicion -> condicionL .)


state 19

    (105) condicion -> condicionR .

    SEMICOLON       reduce using rule 105 (condicion -> condicionR .)
    LINEBREAK       reduce using rule 105 (condicion -> condicionR .)
    $end            reduce using rule 105 (condicion -> condicionR .)
    RCURL           reduce using rule 105 (condicion -> condicionR .)
    RPAREN          reduce using rule 105 (condicion -> condicionR .)


state 20

    (106) condicion -> condicionN .

    SEMICOLON       reduce using rule 106 (condicion -> condicionN .)
    LINEBREAK       reduce using rule 106 (condicion -> condicionN .)
    $end            reduce using rule 106 (condicion -> condicionN .)
    RCURL           reduce using rule 106 (condicion -> condicionN .)
    RPAREN          reduce using rule 106 (condicion -> condicionN .)


state 21

    (94) funcion -> FUN . ID LPAREN RPAREN LCURL lineorBreak RCURL
    (95) funcion -> FUN . ID LPAREN ID RPAREN LCURL lineorBreak RCURL
    (96) funcion -> FUN . ID LPAREN ID RPAREN LCURL RCURL
    (97) funcion -> FUN . ID LPAREN RPAREN LCURL RCURL

    ID              shift and go to state 72


state 22
